tests/transpiler/x/java/json_builtin.error
exit status 1
Main.java:2: error: cannot find symbol
    static java.util.Map<String, Integer> m = java.util.Map.of(a, 1, b, 2);
                                                               ^
  symbol:   variable a
  location: class Main
Main.java:2: error: cannot find symbol
    static java.util.Map<String, Integer> m = java.util.Map.of(a, 1, b, 2);
                                                                     ^
  symbol:   variable b
  location: class Main
Main.java:5: error: cannot find symbol
        json(m);
        ^
  symbol:   method json(Map<String,Integer>)
  location: class Main
3 errors
