tests/transpiler/x/java/json_builtin.java
public class Main {
    static java.util.Map<String, Integer> m = java.util.Map.of(a, 1, b, 2);

    public static void main(String[] args) {
        json(m);
    }
}
